Fix startup crash on alias conflict, wildcard permissions, and four behaviour bugs
Review pass over code that could not be run here. The first one would have taken
the plugin down on many servers:

- SECommand passed an immutable List.of(...) as the alias list. CraftBukkit's
  SimpleCommandMap drops a conflicting alias by calling iterator.remove() on that
  very list, so any collision (/v, /cc, /ec and /r are commonly taken) threw
  UnsupportedOperationException and aborted enable. The list is now mutable.
- scriptedessentials.* granted nothing: Bukkit only expands a wildcard whose
  children are registered. PermissionRegistrar now registers every feature node
  under it, which also gives LuckPerms the node list for tab completion.
- Half heart protection capped void damage and /kill, which left players falling
  forever at half a heart and made /kill look broken. Both are now exempt.
- The chat filter could be bypassed: detection folds leetspeak but censoring only
  strikes out literal spellings, so 'm0ney' was detected and then passed through
  unchanged. It blocks when censoring cannot bite.
- Vanish state was dropped on quit, which made the join handler dead code. It now
  persists, so staff return vanished.
- The category button reopened an inventory from inside InventoryClickEvent, and
  ChatPrompt closed one the same way; both are deferred a tick, and refresh()
  pushes an inventory update because a cancelled click resends the stale view.

Performance: team scoreboard sync no longer resolves profiles or walks the whole
membership on every login, and the rollback lookup no longer risks a blocking
name request on the main thread.

Adds tools/validate.py for the checks a compiler cannot make (message keys,
config options, duplicate commands, unregistered features) plus a friendly error
when the plugin is installed on Spigot instead of Paper.